Creando archivo de estilos y separando secciones por clases

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mi primera pagina web</title>
-</head>
-<body>
-
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <nav></nav>
+      <nav></nav>
+      <nav></nav>
+    </header>
+    <main>
+      <section class="services" id="services"></section>
+      <section class="news" id="news"></section>
+      <section class="team" id="team"></section>
+    </main>
+    <footer class="footer"></footer>
+  </body>
 </html>
