Se agregó etiquetas con su class al servicio 1

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,26 @@
       <nav></nav>
     </header>
     <main>
-      <section class="services" id="services"></section>
+      <section class="services" id="services">
+        <div class="traductor">
+            <img src="https://www.deepl.com/img/press/logo_DeepL.png" alt="Logo Traductor DeepL" class="traductor__image">
+            <h1 class="traductor__title">TRADUCTOR DEEPL</h1>
+            <p class="traductor__description"></p>
+            <a href="https://www.deepl.com/translator" class="traductor_link">Ir a DeepL</a>
+        </div>
+        <div>
+            <img src="" alt="">
+            <h1></h1>
+            <p></p>
+            <a href=""></a>
+        </div>
+        <div>
+            <img src="" alt="">
+            <h1></h1>
+            <p></p>
+            <a href=""></a>
+        </div>
+      </section>
       <section class="news" id="news"></section>
       <section class="team" id="team"></section>
     </main>
