Se agregó la descripcion del servicio 1

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <div class="traductor">
             <img src="https://www.deepl.com/img/press/logo_DeepL.png" alt="Logo Traductor DeepL" class="traductor__image">
             <h1 class="traductor__title">TRADUCTOR DEEPL</h1>
-            <p class="traductor__description"></p>
+            <p class="traductor__description"> Software experto en idiomas encargados de transmitir mensajes escritos de un idioma a otro</p>
             <a href="https://www.deepl.com/translator" class="traductor_link">Ir a DeepL</a>
         </div>
         <div>
