--- a/src/index.html
+++ b/src/index.html
@@ -15,19 +15,19 @@
     <main>
       <section class="services" id="services">
         <div class="traductor">
-            <img src="https://www.deepl.com/img/press/logo_DeepL.png" alt="Logo Traductor DeepL" class="traductor__image">
+            <img src="./assets/LogoDeepL.png" alt="Logo Traductor DeepL" class="traductor__image">
             <h1 class="traductor__title">TRADUCTOR DEEPL</h1>
             <p class="traductor__description"> Software experto en idiomas encargados de transmitir mensajes escritos de un idioma a otro</p>
             <a href="https://www.deepl.com/translator" class="traductor_link">Ir a DeepL >></a>
         </div>
         <div class="learn">
-            <img src="https://cdn.pixabay.com/photo/2017/01/13/14/26/book-1977396_960_720.png" alt="Aprende Inglés" class="learn__image">
+            <img src="./assets/learn.png" alt="Aprende Inglés" class="learn__image">
             <h1 class="learn__title">CURSO INGLES</h1>
             <p class="learn__description">Aprender inglés te abre muchas puertas, entra al sitio y aprende cosas de este idioma mundial</p>
             <a href="https://www.curso-ingles.com/" class="learn__link">Ir al Sitio >></a>
         </div>
-        <div>
-            <img src="" alt="">
+        <div class="practice">
+            <img src="./assets/PracticeEnglish.png" alt="PracticeEnglish" class="practice__image">
             <h1></h1>
             <p></p>
             <a href=""></a>
