Se hicieron cambios en los class

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
             <img src="./assets/images/PracticeEnglish.png" alt="PracticeEnglish" class="practice__image">
             <h1 class="practice__title">PRACTICAR INGLES</h1>
             <p class="practice__description">Ademas de aprenderlo debes ponerlo en practica para que no se te vaya a olvidar, practica con IsCollective</p>
-            <a href="https://es.islcollective.com/">Ir a Practicar</a>
+            <a href="https://es.islcollective.com/" class="practice__link">Ir a Practicar >></a>
         </div>
       </section>
       <section class="news" id="news"></section>
