--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,23 @@
       <section class="news" id="news"></section>
       <section class="team" id="team"></section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <div class = "repositorio">
+            <p>ESTE ES EL PROYECTO DE LA SEMANA 1 DEL GRUPO # 196</p> 
+            <a href="https://github.com/grupo196ciclo3/semana-1-196.git">GRUPO196CICLO3</a>
+           </div>
+          <div class="contacto">
+            <h3>CONTACTENOS:</h3>
+            <ul class ="listacontacto">
+             <li><a href="ivangonzalezgrc@gmail.com">Ivan Gonzalez</a></li>
+             <li><a href="laiton2395@gmail.com">Javier C Laiton</a></li>
+             <li><a href="jomiolta@gmail.com">Jose Olarte</a></li>
+             <li><a href="camitorres1404@gmail.com">Andres Torres</a></li>
+             <li><a href="jdmanriquef@gmail.com">Julian Manrique</a></li>
+             <li><a href="erazoflorezmayraa@gmail.com">Mayra Erazo</a></li>
+            </ul>
+           </div>
+
+    </footer>
   </body>
 </html>
