--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mi primera pagina web</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header class="header">
-      <nav></nav>
-      <nav></nav>
-      <nav></nav>
-    </header>
-    <main>
-      <section class="services" id="services"></section>
-      <section class="news" id="news"></section>
-      <section class="team" id="team"></section>
-    </main>
-    <footer class="footer"></footer>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mi primera pagina web</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <header class="header">
+    <nav></nav>
+    <nav></nav>
+    <nav></nav>
+  </header>
+  <main>
+    <section class="services" id="services"></section>
+    <section class="news" id="news">
+      <div class="columna">
+        <div class="filas">
+          <img src="./assets/images/Noticia 1.jpg" alt="Bajo nivel de inglés" class="imagen">
+          <h4 class="titulo">Colombia, con uno de los niveles de inglés más bajos del mundo </h4>
+          <h6 class="fuente">Tomado de: diario El tiempo</h6>
+          
+          <p class="parrafo">
+            Colombia se encuentra entre los países con peor nivel de inglés en el mundo, de acuerdo con el estudio EF
+            English Proficiency Index (EPI), de la firma Education First, el cual midió el desempeño en esta lengua en 100
+            naciones cuya lengua nativa es otra. El informe realizó un análisis del nivel de inglés de 2,2 millones de
+            personas haciendo mediciones de habilidades de lectura y comprensión auditiva. Tras esto, se dividió el nivel de
+            dominio del idioma en Muy alto, Alto, Moderado, Bajo y Muy Bajo, clasificando a cada país mediante una escala de
+            puntuaciones, en la cual la máxima calificación posible era 800.
+          </p>
+
+          <a class="link"
+            href="https://www.eltiempo.com/vida/educacion/colombia-con-uno-de-los-niveles-de-ingles-mas-bajos-del-mundo-550360">Detalles
+            de la noticia</a>
+        </div>
+        <div class="filas">
+          <img src="./assets/images/Noticia 2.jpg" alt="Oferta de empleo" class="imagen">
+          <h4 class="titulo">Ofertas de empleo: 15 mil ofertas de teletrabajo para bilingües y semibilingües</h4>
+          <h6 class="fuente">Tomado de: diario El tiempo</h6>
+          <p class="parrafo">La compañía internacional Teleperformance anunció que tendrá 15 mil vacantes antes de finalizar el 2020. Los
+            colombianos que deseen trabajar desde casa pueden postularse sin importar la ciudad en la que habiten.
+            Teleperformance lleva 25 años en el país y tiene sedes físicas en Bogotá, Medellín, Barranquilla y Tunja.
+            Asimismo, tiene vinculados más de 25 mil empleados en todo el país. </p>
+          <a class="link"
+            href="https://www.eltiempo.com/cultura/gente/ofertas-de-empleo-15-mil-ofertas-laborales-en-teletrabajo-ofrece-teleperformance-vacantes-537393">Detalles
+            de la noticia</a>
+        </div>
+      </div>
+      <br>
+
+      <div class="columna">
+        <div class="filas">
+          <img src="./assets/images/Noticia 3.jpg" alt="Consejos" class="imagen">
+          <h4 class="titulo">10 trucos para aprender cualquier idioma de un genio que habla 9</h4>
+          <h6 class="fuente">Tomado de: Babbel.com</h6>
+          <p class="parrafo">¿Necesitas un par de consejos para aprender idiomas que te motiven a seguir estudiando? Matthew Youlden habla
+            nueve idiomas fluidamente y entiende casi una docena más. somos testigos de sus habilidades para cambiar de
+            idioma como un camaleón cambia de color. En realidad, durante mucho tiempo ni siquiera sabía que era británico.
+            Cuando le comenté que me estaba costando muchísimo esfuerzo aprender un segundo idioma, no tardó en darme un par
+            de consejos. Si eres de los que piensa que nunca llegará a ser bilingüe, ¡más te vale tomar nota!</p>
+          <a class="link" href="https://es.babbel.com/es/magazine/10-consejos-para-aprender-idiomas">Detalles de la noticia</a>
+        </div>
+
+        <div class="filas">
+          <img src="./assets/images/Noticia 4.jpg" alt="Oportunidades para programadores bilingües" class="imagen">
+          <h4 class="titulo">¿Sabes programación y tienes buen nivel de inglés? Canadá puede ser tu destino</h4>
+          <h6 class="fuente">Tomado de: www.immigration.ca</h6>
+          <p class="parrafo">Actualmente en canadá están aceptando aplicaciones de extranjeros con la experiencia y el entrenamiento
+            adecuados como Programadores Informáticos y/o Desarrolladores de Medios Interactivos, que estén buscando vivir y
+            trabajar allí,de manera acelerada, en un empleo a tiempo completo en esta profesión en Canadá. Los programas de
+            trabajo acelerados proporcionan una entrada temporal inmediata a Canadá a los candidatos calificados y sus
+            familias en base a una oferta de trabajo a tiempo completo aprobada por el gobierno, proporcional a sus
+            calificaciones.</p>
+          <a class="link" href="https://www.immigration.ca/es/programadores-informaticos-y-desarrolladores-de-medios-interactivos">Detalles
+            de la noticia</a>
+        </div>
+      </div>
+    </section>
+    <section class="team" id="team"></section>
+  </main>
+  <footer class="footer"></footer>
+</body>
+
 </html>
