--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mi primera pagina web</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header class="header">
-      <nav></nav>
-      <nav></nav>
-      <nav></nav>
-    </header>
-    <main>
-      <section class="services" id="services"></section>
-      <section class="news" id="news"></section>
-      <section class="team" id="team"></section>
-    </main>
-    <footer class="footer"></footer>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mi primera pagina web</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <header class="header">
+    <nav></nav>
+    <nav></nav>
+    <nav></nav>
+  </header>
+  <main>
+    <section class="services" id="services"></section>
+    <section class="news" id="news"></section>
+
+    <section class="team" id="team">
+      <h2 class="teamtitle"> Work Team</h2>
+      <div class="row">
+        <div class="column">
+          <div class="card">
+            <img class= "fotos" src="./assets/images/Mayra.jpg" alt="Mayra">
+            <div>
+              <h3>Mayra A. Erazo</h3>
+              <p class="title">Biologist</p>
+              <p>Universidad del Valle</p>
+              <p>Cali-Valle</p>
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="card">
+            <img class= "fotos" src="./assets/images/worker.png" alt="Andres">
+            <div>
+              <h3>Andrés C. Torres</h3>
+              <p class="title"> Systems Eng.Student</p>
+              <p>Universidad Cooperativa</p>
+              <p>Loren ipsum</p>
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="card">
+            <img class= "fotos" src="./assets/images/Ivan.jpg" alt="Ivan">
+            <div>
+              <h3>Iván González</h3>
+              <p class="title">Electronic Engineer</p>
+              <p>Universidad del Norte</p>
+              <p>Monteria - Córdoba</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="column">
+          <div class="card">
+            <img class= "fotos" src="./assets/images/Javier.jpeg" alt="Javier">
+            <div>
+              <h3>Javier Laiton</h3>
+              <p class="title">Industrial Engineer</p>
+              <p>Fundación Universitaria CAFAM</p>
+              <p>Bogotá D.C.</p>
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="card">
+            <img class= "fotos" src="./assets/images/worker.png" alt="Julian">
+            <div>
+              <h3>Julian Manrique</h3>
+              <p class="title">Chemical Engineer</p>
+              <p>Universidad Nacional</p>
+              <p>Bogotá D.C.</p>
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="card">
+            <img class= "fotos" src="./assets/images/Jose.jpeg" alt="Jose">
+            <div>
+              <h3>José Olarte</h3>
+              <p class="title">Economist</p>
+              <p>Universidad de Cartagena</p>
+              <p>Cartagena - Bolivar</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="footer"></footer>
+</body>
+
 </html>
