--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       <section class="parte-superior">
         <!-- inicio titulo -->
         <div class="titulo-principal">
-          <h1>
+          <h1 class="titulo-header">
             Vives una nueva vida por cada idioma nuevo que hablas. Si conoces sólo un idioma, sólo vives una vez. Proverbio checo
           </h1>
         </div>
