Ultimas modificaciones del BootStrap

--- a/src/index.html
+++ b/src/index.html
@@ -228,7 +228,7 @@
       </div>
     </section>
   </main>
-  <footer class="footer">
+  <footer class="footer pt-3">
     <div class="card-group bg-info">
       <div class="card bg-info mt-3 ml-3 mb-3">
         <div class="card-body m-5">
