--- a/src/index.html
+++ b/src/index.html
@@ -121,8 +121,8 @@
           <div class="carousel-item">
             <a href="https://es.babbel.com/es/magazine/10-consejos-para-aprender-idiomas"><img class="d-block w-100" src="./assets/images/Noticia 3.jpg" alt="Consejos" height="500px">
             <div class="carousel-caption d-none d-md-block bg-info p-3">
-              <h4 class="titulo">10 trucos para aprender cualquier idioma de un genio que habla 9</h4>
-              <h6 class="fuente">Tomado de: Babbel.com</h6></a>
+              <h4 class="titulo text-white">10 trucos para aprender cualquier idioma de un genio que habla 9</h4>
+              <h6 class="fuente text-white">Tomado de: Babbel.com</h6></a>
               <p class="text-lefts">
                 ¿Necesitas un par de consejos para aprender idiomas que te motiven a seguir estudiando? Matthew Youlden
                 habla nueve idiomas fluidamente y entiende casi una docena más. somos testigos de sus habilidades para
