--- a/src/index.html
+++ b/src/index.html
@@ -123,6 +123,28 @@
       </section>
       <!-- movies -->
       <section id="movies">
+        <div class="container-fluid">
+          <h3 class="mb-3">SEARCH MOVIES</h3>
+          <form>
+            <div class="form-row">
+              <div class="col-7 mr-3">
+                <input type="text" id="movieSearchTitle" class="form-control" placeholder="Enter the movie title">
+              </div>
+              <div>
+                <button id="submit" class="btn btn-info w-100" type="Submit">Search Movie</button>
+              </div>
+            </div>
+            <hr>
+            <div id="movieContainer" class="form-inline">
+              <div id="imagen" class="mr-4">
+              </div>
+              <div id="informacion" class="col-6">
+              </div>
+            </div>
+            <hr>
+          </form>
+        </div>
+
       </section>
       <!-- news -->
       <section id="news">
@@ -372,7 +394,8 @@
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-
+  <script src="./app.js"></script>
+  
 </body>
 
 </html>
