--- a/src/index.html
+++ b/src/index.html
@@ -345,7 +345,7 @@
           <!-- Grid column -->
           <div class="col-md-6 mt-md-0 mt-3 pt-4">
             <!-- Content -->
-            <h5 class="card-title mt-5">ESTE ES EL PROYECTO DEL GRUPO # 196</h5>
+            <h5 class="card-title">ESTE ES EL PROYECTO DEL GRUPO # 196</h5>
             <a class="text-light" href="https://github.com/grupo196ciclo3/semana-2-196.git">IR AL REPOSITORIO >></a>
           </div>
           <!-- Grid column -->
@@ -355,23 +355,35 @@
             <!-- Content -->
             <h4 class="m-3 text-center">CONTACTENOS:</h4>
             <ul class="list-unstyled">
-              <li class="media">
-                <span class="h5 text-light">Ivan Gonzalez: <a class="text-light"
-                    href="mailto:ivangonzalezgrc@gmail.com">ivangonzalezgrc@gmail.com</a></span>
-                <span class="h5 text-light">Javier C Laiton: <a class="text-light"
-                    href="mailto:laiton2395@gmail.com">laiton2395@gmail.com</a></span>
+              <li class="container d-flex justify-content-around">
+                <div class="w-50 mb-2">
+                  <p class="h5 text-light">Ivan Gonzalez: <a class="text-light"
+                      href="mailto:ivangonzalezgrc@gmail.com">ivangonzalezgrc@gmail.com</a></p>
+                </div>
+                <div class="w-50 mb-2">
+                  <p class="h5 text-light">Javier C Laiton: <a class="text-light"
+                      href="mailto:laiton2395@gmail.com">laiton2395@gmail.com</a></p>
+                </div>
               </li>
-              <li class="media">
-                <span class="h5 text-light">Andres Torres: <a class="text-light"
-                    href="mailto:camitorres1404@gmail.com">camitorres1404@gmail.com</a></span>
-                <span class="h5 text-light">José Olarte: <a class="text-light"
-                    href="mailto:jomiolta@gmail.com">jomiolta@gmail.com</a></span>
+              <li class="container d-flex justify-content-around">
+                <div class="w-50 mb-2">
+                  <p class="h5 text-light">Andres Torres: <a class="text-light"
+                      href="mailto:camitorres1404@gmail.com">camitorres1404@gmail.com</a></p>
+                </div>
+                <div class="w-50 mb-2">
+                  <p class="h5 text-light">José Olarte: <a class="text-light"
+                      href="mailto:jomiolta@gmail.com">jomiolta@gmail.com</a></p>
+                </div>
               </li>
-              <li class="media">
-                <span class="h5 text-light">Julian Manrique: <a class="text-light"
-                    href="mailto:jdmanriquef@gmail.com">jdmanriquef@gmail.com</a></span>
-                <span class="h5 text-light">Mayra Erazo: <a class="text-light"
-                    href="mailto:erazoflorezmayraa@gmail.com">erazoflorezmayraa@gmail.com</a></span>
+              <li class="container d-flex justify-content-around">
+                <div class="w-50 mb-2">
+                  <p class="h5 text-light">Julian Manrique: <a class="text-light"
+                      href="mailto:jdmanriquef@gmail.com">jdmanriquef@gmail.com</a></p>
+                </div>
+                <div class="w-50 mb-2">
+                  <p class="h5 text-light">Mayra Erazo: <a class="text-light"
+                      href="mailto:erazoflorezmayraa@gmail.com">erazoflorezmayraa@gmail.com</a></p>
+                </div>
               </li>
             </ul>
           </div>
@@ -395,7 +407,7 @@
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
   <script src="./app.js"></script>
-  
+
 </body>
 
 </html>
